[gd_scene load_steps=6 format=3 uid="uid://cufkg4a6l1oe8"]

[ext_resource type="Script" path="res://scenes/weapons/word/word_weapon.gd" id="1_anhv8"]
[ext_resource type="FontFile" uid="uid://nskudpk8rqcw" path="res://scenes/weapons/word/Mario-Kart-DS.ttf" id="2_o0h4m"]
[ext_resource type="PackedScene" uid="uid://bh7uyqbqidiur" path="res://scenes/component/hitbox_component.tscn" id="3_gyusg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p32fa"]
size = Vector2(45, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxk1k"]
size = Vector2(45, 12)

[node name="WordWeapon" type="Node2D"]
script = ExtResource("1_anhv8")

[node name="Visuals" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Visuals"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -9.5
offset_right = 46.0
offset_bottom = 9.5
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_o0h4m")
theme_override_font_sizes/font_size = 18
text = "aiken"

[node name="HitboxComponent" parent="." instance=ExtResource("3_gyusg")]
collision_layer = 4
collision_mask = 0
damage = 20.0
knockback_force = 1500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(22.5, -1)
shape = SubResource("RectangleShape2D_p32fa")

[node name="ImpactDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactDetector"]
position = Vector2(22.5, -1)
shape = SubResource("RectangleShape2D_hxk1k")

[node name="DespawnTimer" type="Timer" parent="."]
